# metamorf

./: API.md  LICENSE.md  README.md  pyproject.toml
metamorf/: constants.py  help.py  main.py
metamorf/configuration/: configuration.yml  properties.yml
metamorf/configuration/postgresql/: configuration_data_postgresql.yml  configuration_metadata_postgresql.yml
metamorf/engines/: engine.py  engine_api.py  engine_backup.py  engine_commit.py  engine_delete.py  engine_deploy.py  engine_deploy_example.py  engine_download.py  engine_files.py  engine_init.py  engine_manifest.py  engine_metadata.py  engine_output.py  engine_process.py  engine_recover.py  engine_restore.py  engine_run.py  engine_upload.py  engine_validate.py
metamorf/initialization/: init_example_data_snowflake.sql  init_example_data_sqlite.sql  init_example_metadata_snowflake.sql  init_example_metadata_sqlite.sql  init_snowflake.sql  init_sqlite.sql
metamorf/initialization/mysql/: init_example_data_mysql.sql  init_example_metadata_mysql.sql  init_mysql.sql
metamorf/initialization/postgresql/: init_example_data_postgresql.sql  init_example_metadata_postgresql.sql  init_postgresql.sql
metamorf/initialization/snowflake/: init_example_data_snowflake.sql  init_example_metadata_snowflake.sql  init_snowflake.sql
metamorf/initialization/sqlite/: init_sqlite.sql  (+2 more)
metamorf/tools/: argparser.py  configvalidator.py  connection.py  database_objects.py  filecontroller.py  log.py  manifest.py  metadata.py  metadata_validator.py  node.py  query.py  utils.py
tests/: tests.py  tests_query.py  tests_validator.py
