[project]
name = "Metamorf"
version = "0.4"
authors = [
  { name="Guillermo Aumatell", email="gaumatellsalom@gmail.com" },
]
description = "Metadata Suite to build and manage your Datawarehouse"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "snowflake-connector-python",
    "PyYAML",
    "Flask",
    "psycopg2"
]

[tool.setuptools]
packages = ["metamorf", "metamorf.engines", "metamorf.tools", "metamorf.entry",
    "metamorf.configuration", "metamorf.configuration.mysql" , "metamorf.configuration.snowflake", "metamorf.configuration.sqlite",
    "metamorf.initialization.sqlite",  "metamorf.initialization.snowflake", "metamorf.initialization.mysql"]

[tool.setuptools.package-data]
"metamorf.configuration" = ["*.yml"]
"metamorf.initialization" = ["*.sql"]
"metamorf.entry" = ["*.csv"]
"metamorf.example" = ["*.csv", "*.sql"]

[project.urls]
"Homepage" = "https://github.com/gasalom/metamorf"
"Bug Tracker" = "https://github.com/gasalom/metamorf/issues"

[project.scripts]
metamorf = "metamorf.main:main"

[build-system]
requires = ["setuptools>=61.0", "snowflake-connector-python", "fdb", "PyYAML", "Flask", "psycopg2"]
build-backend = "setuptools.build_meta"